--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My GitHub Pages Site</title>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple website hosted on GitHub Pages.</p>
+    <h1>Welcome to My Test Website!</h1>
+    <p>This is a test website made by Lincoln Blanch</p>
 </body>
 </html>
