--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Cookie Clicker</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+        #cookie {
+            width: 200px;
+            cursor: pointer;
+        }
+        #score {
+            font-size: 2em;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Test Website!</h1>
-    <p>This is a test website made by Lincoln Blanch</p>
+    <h1>Cookie Clicker</h1>
+    <img id="cookie" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Chocolate_chip_cookie.png/1200px-Chocolate_chip_cookie.png" alt="Cookie" />
+    <div id="score">0 cookies</div>
+    <script>
+        let score = 0;
+
+        document.getElementById('cookie').onclick = function() {
+            score++;
+            document.getElementById('score').innerText = score + ' cookies';
+        };
+    </script>
 </body>
 </html>
