--- a/index.html
+++ b/index.html
@@ -8,28 +8,51 @@
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-image: url('https://images.unsplash.com/photo-1612880260543-3e7cda90a72f');
+            background-size: cover;
+            color: #fff;
         }
         #cookie {
             width: 200px;
             cursor: pointer;
+            margin: 20px;
         }
         #score {
             font-size: 2em;
             margin-top: 20px;
         }
+        #upgrade {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            cursor: pointer;
+            background-color: #ffcc00;
+            border: none;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
     <h1>Cookie Clicker</h1>
-    <img id="cookie" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Chocolate_chip_cookie.png/1200px-Chocolate_chip_cookie.png" alt="Cookie" />
+    <img id="cookie" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Cookie_icon.svg/1200px-Cookie_icon.svg.png" alt="Cookie" />
     <div id="score">0 cookies</div>
+    <button id="upgrade">Upgrade (Cost: 10 cookies)</button>
     <script>
         let score = 0;
+        let clickValue = 1;
 
         document.getElementById('cookie').onclick = function() {
-            score++;
+            score += clickValue;
             document.getElementById('score').innerText = score + ' cookies';
+        };
+
+        document.getElementById('upgrade').onclick = function() {
+            if (score >= 10) {
+                score -= 10;
+                clickValue++;
+                document.getElementById('score').innerText = score + ' cookies';
+                this.innerText = `Upgrade (Cost: ${10 * clickValue} cookies)`;
+            }
         };
     </script>
 </body>
