--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Unblocked Games</h1>
-    <a href = "/CookieClickerUnblocked-From-Lincoln-Blanch"><h3>Cookie Clicker</h3></a>
+    <a href = "/CookieClickerUnblocked"><h3>Cookie Clicker</h3></a>
   </body>
 </html>
